# Code-Challenges-and-Algorithms

./: README.md
javascript/: README.md  package.json
python/: .gitignore  BST.py  README.md  Tree_Traversal.py  pull.py  pyproject.toml  reverse.py  sub_string.py  x.py
python/code_challenges/challenge00/: test_challenge00.py
python/code_challenges/graph/challenge01/: challenge01.py  test_challenge01.py
python/code_challenges/hashtable/: whiteboard01.md
python/code_challenges/hashtable/challenge01/hash01/: challenge01.py
python/code_challenges/hashtable/challenge01/test_hash01/: test_challenge01.py
python/code_challenges/hashtable/challenge02/: challenge02.py  test_challenge02.py  whiteboard02.md
python/code_challenges/hashtable/h/: challenge01.py
python/code_challenges/hashtable/t/: test_challenge01.py
python/code_challenges/linkedlist/: whiteboard.md
python/code_challenges/linkedlist/challenge01/: challenge01.py  test_challenge01.py  whiteboard.md
python/code_challenges/linkedlist/challenge02/: challenge02.py  test_challenge02.py  whiteboard02.md
python/code_challenges/linkedlist/challenge03/: challenge03.py  test_challenge03.py  whiteboard03.md
python/code_challenges/stack_queue/: whiteboard01.md  whiteboard02.md
python/code_challenges/stack_queue/challenge01/stack/: challenge01.py
python/code_challenges/stack_queue/challenge01/tests_queue/: test_challenge01.py
python/code_challenges/stack_queue/challenge02/stack02/: challenge02.py
python/code_challenges/tree/challenge03/: whiteboard03.md
python/tests/: test_sample_challenge.py
(+6 files in other folders)
