[tool.poetry]
name = "python"
version = "0.1.0"
description = "Code Challenges"
authors = ["Boshra Jaber <boshrajaber94@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LTUC/code-challenges-students-template"
repository = "https://github.com/python-poetry/poetry"
keywords = ["code challenges", "algorithm"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LTUC/code-challenges-students-template/issues"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"